# slide-code-ver1

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  env.local  generated_slides.md  package.json  slide.sh
.cursor/commands/: create-linear-task.md
.serena/: project.yml
apply-patch/: Cargo.toml
apply-patch/src/: lib.rs
chatgpt/: Cargo.toml
chatgpt/src/: client.rs
cli/: Cargo.toml
cli/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs
core/: Cargo.toml
core/src/: agent_executor.rs  approval_mode.rs  bash_parser.rs  client.rs  codex2.rs  config.rs  conversation_manager.rs  error.rs  exec_impl.rs  file_operations.rs  lib.rs  message_history.rs  openai_model_info.rs  openai_tools.rs  plan_manager_impl.rs  protocol.rs  safety_impl.rs  seatbelt.rs  spawn_impl.rs  tool_apply_patch.rs  tool_apply_patch_impl.rs
file-search/: Cargo.toml
file-search/src/: cli.rs  lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
slide-cli/: package.json
slide-core/: Cargo.toml
slide-core/slide-cli/: Cargo.toml
slide-core/slide-cli/src/: main.rs
slide-core/slide-common/src/: approval_mode.rs  config.rs  lib.rs
slide-core/slide-tui/: Cargo.toml
slide-core/slide-tui/src/: app.rs  lib.rs  preview.rs
slide-rs/: Cargo.toml
slide-rs/ansi-escape/: AGENTS.md  Cargo.toml
slide-rs/ansi-escape/src/: lib.rs
slide-rs/apply-patch/: AGENTS.md  Cargo.toml  apply_patch_tool_instructions.md
slide-rs/apply-patch/src/: lib.rs  main.rs  parser.rs  seek_sequence.rs  standalone_executable.rs
slide-rs/arg0/: AGENTS.md  Cargo.toml
slide-rs/arg0/src/: lib.rs
slide-rs/chatgpt/: AGENTS.md  Cargo.toml
slide-rs/chatgpt/src/: client.rs  lib.rs
slide-rs/cli/: AGENTS.md  Cargo.toml
slide-rs/cli/src/: main.rs
slide-rs/common/: AGENTS.md  Cargo.toml
slide-rs/common/src/: approval_mode.rs  config.rs  file_utils.rs  lib.rs
slide-rs/core/: AGENTS.md  Cargo.toml
slide-rs/core/src/: apply_patch.rs  approval_manager.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex2.rs  codex_conversation.rs  config.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  environment_context.rs  error.rs  exec.rs  exec_basic.rs  exec_env.rs  exec_sandboxed.rs  flags.rs  git_info.rs  is_safe_command.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_server.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  plan_tool.rs  project_doc.rs  prompt_for_compact_command.md  protocol.rs  rollout.rs  (+12 more)
slide-rs/core/src/exec_command/: exec_command_params.rs  exec_command_session.rs  mod.rs  responses_api.rs  session_id.rs  session_manager.rs
slide-rs/file-search/: Cargo.toml
slide-rs/file-search/src/: cli.rs  lib.rs  main.rs
slide-rs/protocol/: Cargo.toml
slide-rs/protocol/src/: AGENTS.md  config_types.rs  custom_prompts.rs  lib.rs  models.rs  parse_command.rs  plan_tool.rs  protocol.rs
slide-rs/slides-tools/: Cargo.toml  README.md
slide-rs/slides-tools/tests/: basic.rs
slide-rs/tui/: AGENTS.md  Cargo.toml
slide-rs/tui/src/: agent.rs  app.rs  app_event_sender.rs  custom_terminal.rs  history_store.rs  insert_history.rs  interactive.rs  lib.rs  preview.rs  streaming.rs  user_approval_widget.rs
slide-rs/tui/src/bottom_pane/: AGENTS.md  approval_modal_view.rs  bottom_pane_view.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  file_search_popup.rs  list_selection_view.rs  mod.rs  paste_burst.rs  popup_consts.rs  scroll_state.rs  selection_popup_common.rs  textarea.rs
slide-rs/tui/src/widgets/: banner.rs  chat.rs  composer.rs  list_selection.rs  mod.rs  modal.rs  status_bar.rs
slides/: sample.md  test-template.md
src/: main.rs
tui/: Cargo.toml
tui/src/: agent.rs  app.rs  app_event_sender.rs  bottom_pane.rs  interactive.rs  lib.rs  preview.rs  user_approval_widget.rs  widgets.rs
