[workspace]
members = [
    "common",
    "tui",
    "protocol",
    "file-search",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
uninlined_format_args = "deny" 
unwrap_used = "deny"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

# Main binary
