[package]
name = "slide-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
slide-core = { path = "../core" }
slide-tui = { path = "../tui" }
slide-common = { path = "../common" }