[package]
name = "slide-core"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
async-channel = "2.5.0"
mcp-types = "0.1.1"
slide-chatgpt = { path = "../chatgpt" }
slide-common = { path = "../common" }
slide-apply-patch = { path = "../apply-patch" }