[package]
name = "slide-file-search"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
ignore = "0.4"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }