[package]
name = "slide-tui"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
slide-common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
slide-core = { path = "../core" }
unicode-width = "0.1"