[package]
name = "slide-apply-patch"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "slide_apply_patch"
path = "src/lib.rs"

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
similar = "2.7.0"
tree-sitter = "0.25.8"
tree-sitter-bash = "0.25.0"