[package]
name = "slide-cli"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "slide"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
slide-common = { path = "../common" }
slide-tui = { path = "../tui" }
slide-core = { path = "../core" }
slide-arg0 = { path = "../arg0" }
tiny_http = "0.12"
webbrowser = "0.8"
html-escape = "0.2"