[package]
name = "slide-core"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
slide-common = { path = "../common" }
slide-chatgpt = { path = "../chatgpt" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
slide-apply-patch = { path = "../apply-patch" }
uuid = { version = "1", features = ["v4"] }
