[package]
name = "slide-core"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
slide-common = { path = "../common" }
slide-chatgpt = { path = "../chatgpt" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tree-sitter = "0.25.8"
tree-sitter-bash = "0.25.0"
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
async-channel = "2.5.0"
mcp-types = "0.1.1"
toml = "0.8"
