[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-types = { version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
slide-common = { path = "../common" }

[lints]
workspace = true
