[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-types = { version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
slide-common = { path = "../common" }
strum = "0.27.2"
strum_macros = "0.27.2"
ts-rs = { version = "11", features = ["uuid-impl", "serde-json-impl"] }
base64 = "0.22"
mime_guess = "2"
tracing = "0.1"

[lints]
workspace = true
