[package]
name = "slides-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
path-absolutize = "3"
slide_apply_patch = { package = "slide-apply-patch", path = "../apply-patch" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "slides_write"
path = "src/bin/slides_write.rs"

[[bin]]
name = "slides_apply_patch"
path = "src/bin/slides_apply_patch.rs"
